# harpia-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  ProjectHome.md  README.md  emcc_test.c  empp_test.cpp
Harpia/: CMakeLists.txt  Core.cpp  Core.h
Harpia/Configuration/: CMakeLists.txt  Configuration.h
Harpia/Engine/: Asset.cpp  Asset.h  CMakeLists.txt  ColorInt.cpp  Configuration.h  Scene.cpp  Scene.h  String.h  Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h
Harpia/Engine/Application/: Application.cpp  Application.h  Asset.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Debug.cpp  Debug.h  IScene.cpp  IScene.h  ISceneDescription.cpp  ISceneDescription.h  Input.cpp  Input.h  KeyState.cpp  KeyState.h  OpenGLApplication.cpp  OpenGLApplication.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  RendererOpenGl.cpp  RendererOpenGl.h  Scene.h
Harpia/Engine/Application/Audio/: Audio.h  Music.cpp
Harpia/Engine/Application/Input/: Input.cpp  Input.h  InputSystem.h  KeyState.h
Harpia/Engine/Application/Internal/: Application_Internal.h  CMakeLists.txt
Harpia/Engine/Application/Rendering/: GLTypes.h  Renderer.cpp  Renderer.h  RendererOpenGl.cpp  RendererOpenGl.h  SDLTypes.h
Harpia/Engine/Application/hge/: Application.cpp  Application.h
Harpia/Engine/Audio/: Audio.cpp  Audio.h  AudioAsset.cpp  AudioAsset.h  AudioDefines.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  Music.h  MusicAsset.cpp  MusicAsset.h
Harpia/Engine/Audio/hge/: AudioAsset.cpp  AudioAsset.h  AudioSystem.cpp  AudioSystem.h  MixTypes.h  MusicAsset.cpp  MusicAsset.h
Harpia/Engine/Core/: Asset.h  CMakeLists.txt  Configuration.h  CoreDefines.h  CoreSystem.cpp  CoreSystem.h  Debug.cpp  Debug.h  Defines.cpp  Defines.h  Event.h  GlobalDefines.h  IApplicationSystem.h  InternalDefines.h  Transform.cpp  Transform.h
Harpia/Engine/Core/Internal/: Application_Internal.cpp  Application_Internal.h  Component_Internal.cpp  Component_Internal.h  InternalDefines.h  Scene_Internal.cpp  Scene_Internal.h
Harpia/Engine/Core/Structures/: ColorInt.cpp  ColorInt.h  Matrix4X4.cpp  Matrix4X4.h  Quaternion.cpp  Quaternion.h  RectInt.h  String.cpp  Vector3.cpp
Harpia/Engine/Core/hge/: Asset.cpp  Configuration.h  CoreSystem.cpp  CoreSystem.h  Event.h  InternalDefines.h  Transform.cpp  Transform.h
Harpia/Engine/Debug/: CMakeLists.txt  Debug.cpp  Debug.h  HarpiaAssert.cpp  HarpiaAssert.h
Harpia/Engine/Debug/hge/: HarpiaAssert.cpp
Harpia/Engine/Game/: CMakeLists.txt  Component.cpp  Component.h  GameDefines.h  HierarchyStatic.cpp  HierarchyStatic.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneDescription.cpp  SceneDescription.h  SceneManagementSystem.cpp  SceneManagementSystem.h  ScenePrivate.cpp  ScenePrivate.h  SceneSystem.cpp  SceneSystem.h  Transform.cpp  Transform.h
Harpia/Engine/Game/Components/: AudioComponent.cpp  AudioComponent.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  MusicComponent.cpp  MusicComponent.h  RendererComponent.cpp  RendererComponent.h
Harpia/Engine/Game/Internal/: CMakeLists.txt  Component_Internal.cpp  Component_Internal.h  MeshGenerator.cpp  MeshGenerator.h  Scene_Internal.cpp  Scene_Internal.h
Harpia/Engine/Game/hge/: HierarchyStatic.cpp  HierarchyStatic.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneSystem.cpp  SceneSystem.h
Harpia/Engine/Input/: CMakeLists.txt  InputDefines.h  InputReader.cpp  InputReader.h  InputSystem.cpp  InputSystem.h
Harpia/Engine/Input/hge/: InputReader.cpp  InputSystem.h  (+1 more)
Harpia/Engine/Rendering/: CMakeLists.txt  Camera_Internal.h  GLTypes.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  Renderer.cpp  RendererOpenGl.h  Renderer_Internal.cpp  Renderer_Internal.h  RenderingDefines.h  RenderingSystem.cpp  RenderingSystem.h  RenderingSystemGL.cpp  RenderingSystemGL.h  RenderingSystemSDL.cpp  RenderingSystemSDL.h  RenderingSystemVulkan.cpp  RenderingSystemVulkan.h  ShaderAsset.cpp  ShaderAsset.h
Harpia/Engine/Structures/: CMakeLists.txt  Color.cpp  Color.h  ColorInt.cpp  ColorInt.h  HarpiaMath.h  Matrix4X4.cpp  Matrix4X4.h  Quaternion.cpp  Quaternion.h  Rect.cpp  RectInt.cpp  RectInt.h  String.cpp  String.h  Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h
SampleGame/: CMakeLists.txt  GameConfig.cpp  GameConfig.h  Main.cpp
SampleGame/Scenes/: MainScene.cpp  MainScene.h  Scenes.h
SampleGame/Scripts/: RotateAround.cpp  RotateAround.h  TestAudio.cpp  TestAudio.h
harpia/: CMakeLists.txt
harpia/engine/: CMakeLists.txt
harpia/engine/application/: CMakeLists.txt
harpia/engine/audio/: CMakeLists.txt
harpia/engine/core/: CMakeLists.txt
harpia/engine/debug/: CMakeLists.txt
harpia/engine/game/: CMakeLists.txt
harpia/engine/image/: CMakeLists.txt
harpia/engine/input/: CMakeLists.txt
harpia/engine/rendering/: CMakeLists.txt
harpia/engine/structures/: CMakeLists.txt
harpia/engine/ui/: CMakeLists.txt
harpia/tests/: harpia.tests.cpp
sample_game/: CMakeLists.txt  emscripten_shell.html  game_config.cpp  game_config.h  main.cpp
sample_game/assets/models/: cube.mtl  shapes.blend  shapes.blend1  shapes.fbx
sample_game/assets/shader/: test.frag  test.vert
sample_game/assets/shaders/: default.frag  default.vert  text.frag  text.vert
sample_game/assets/spaceships/: spaceships.blend  spaceships.blend1  spaceships.fbx
sample_game/scenes/: all_the_things_scene.cpp  all_the_things_scene.h  main_scene.cpp  main_scene.h  spaceship_scene.cpp  spaceship_scene.h
sample_game/scripts/: character_controller.cpp  character_controller.h  keyboard_mover.cpp  keyboard_mover.h  main_scene_controller.cpp  rotate_around.cpp  rotate_around.h  test_audio.cpp  test_audio.h
sample_game/scripts/all_the_things_scene/: character_controller.cpp  character_controller.h  test_audio.cpp  test_audio.h
sample_game/scripts/main_scene/: main_scene_controller.cpp  main_scene_controller.h
sample_game/scripts/spaceship_scene/: player_spaceship_controller.cpp  player_spaceship_controller.h
(+497 files in other folders)
